--- a/POM.xml
+++ b/POM.xml
@@ -35,7 +35,7 @@
             <scope>provided</scope>
         </dependency>
        
-
+</dependencies>
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
     <build>
         <defaultGoal>install</defaultGoal>
